--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,10 @@
+# Mac OS X
+*.DS_Store
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
+project.xcworkspace/
 
 ## User settings
 xcuserdata/
@@ -22,6 +26,7 @@ DerivedData/
 *.perspectivev3
 !default.perspectivev3
 
+
 ## Obj-C/Swift specific
 *.hmap
 
@@ -29,6 +34,7 @@ DerivedData/
 *.ipa
 *.dSYM.zip
 *.dSYM
+
 
 ## Playgrounds
 timeline.xctimeline
@@ -65,6 +71,8 @@ playground.xcworkspace
 # Carthage/Checkouts
 
 Carthage/Build/
+Carthage/Checkouts
+
 
 # Accio dependency management
 Dependencies/
@@ -81,6 +89,8 @@ fastlane/report.xml
 fastlane/Preview.html
 fastlane/screenshots/**/*.png
 fastlane/test_output
+fastlane/app_archive
+
 
 # Code Injection
 #
@@ -88,3 +98,13 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+## Other
+*.moved-aside
+*.xcuserstate
+
+## Tools artifacts
+cpd-output.xml
+
+## SwiftyBeaver
+Hamew.beaver
