--- a/Meow.xcodeproj/xcshareddata/xcschemes/Meow.xcscheme
+++ b/Meow.xcodeproj/xcshareddata/xcschemes/Meow.xcscheme
@@ -60,11 +60,11 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       launchStyle = "0"
       useCustomWorkingDirectory = "YES"
+      customWorkingDirectory = "/Users/est8/iOSProjects/Meow"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
-      allowLocationSimulation = "YES"
-      customWorkingDirectory = "/Users/est8/iOSProjects/Meow">
+      allowLocationSimulation = "YES">
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
